trying to fix checkbox bug on mobile

--- a/style.css
+++ b/style.css
@@ -153,12 +153,14 @@ header div:nth-child(2) button {
 #addBook>div{
     display: grid;
     grid-template-columns: 4fr 1fr;
+    align-items: center;
 }
 input[type="checkbox"] {
     padding: 0;
     margin: 0;
     border: none;
     background: none;
+    align-self: stretch;
   }
 
 .container>div{
